--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
+    <!--
+        ---------------------------------
+                    Navbar start 
+         --------------------------------
+     -->
+    <header class="navbar-portion">
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
@@ -57,6 +62,88 @@
         </nav>
       </div>
     </header>
+     <!--
+        ---------------------------------
+                    Navbar end 
+         --------------------------------
+     -->
+
+     <!-- 
+         ------------------------------------
+                    carousel start 
+         -----------------------------------
+     -->
+
+      <section class="carousel-portion container rounded mt-4">
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel ">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="row d-flex align-items-center justify-content-center">
+                    <div class="col-12 col-md-6 col-lg-7 d-flex justify-content-center">
+                     <div class="product-info ">
+                        <h1>MI TV For Sports</h1>
+                        <p>This is the best tv in the world. Who wants to spent time infront of tv</p>
+                        <h1 class="price-color">$1200</h1>
+                        <button class="btn-color rounded-pill mt-3">Buy Now</button>
+                     </div>
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-5">
+                        <img src="./images/tv.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row d-flex align-items-center justify-content-center">
+                    <div class="col-12 col-md-6 col-lg-7 d-flex justify-content-center">
+                        <div class="product-info ">
+                           <h1>X-BOX For Your Living Room</h1>
+                           <p>This is the best X-Box.Who realy love to play virtual game.</p>
+                           <h1 class="price-color">$800</h1>
+                           <button class="btn-color rounded-pill mt-3">Buy Now</button>
+                        </div>
+                       </div>
+                    <div class="col-12 col-md-4 col-lg-5">
+                        <img src="./images/xbox.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row d-flex align-items-center justify-content-center">
+                    <div class="col-12 col-md-6 col-lg-7 d-flex justify-content-center">
+                        <div class="product-info ">
+                           <h1>Cool Dude Headphone</h1>
+                           <p>This is the best cool dude Headphone.who realy like funkey style.</p>
+                           <h1 class="price-color">$400</h1>
+                           <button class="btn-color rounded-pill mt-3">Buy Now</button>
+                        </div>
+                       </div>
+                    <div class="col-12 col-md-4 col-lg-5">
+                        <img src="./images/headphone.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+      </section>
+
+ <!-- 
+         ------------------------------------
+                    carousel end 
+         -----------------------------------
+     -->
+
+
+
+
+
 
     <!-- Bootstrap js bundle  -->
     <script
