--- a/index.html
+++ b/index.html
@@ -141,8 +141,41 @@
      -->
 
 
+ <!-- 
+         ------------------------------------
+                   Catagories start 
+         -----------------------------------
+     -->
 
+     <section class="container catagories mt-5">
+         <div class="row">
+             <div class="col-lg-4 ">
+                 <div class="cart-one d-flex align-items-center justify-content-between cart-one rounded">
+                     <h1 class="catagories-title">Bag</h1>
+                     <img src="./images/watch.png" class="cart-img" alt="">
+                 </div>
+             </div>
+             <div class="col-lg-4 ">
+                 <div class="cart-one d-flex align-items-center justify-content-between cart-two rounded">
+                     <h1 class="catagories-title">Shoes</h1>
+                     <img src="./images/bag.png" class="cart-img" alt="">
+                 </div>
+             </div>
+             <div class="col-lg-4">
+                 <div class="cart-one d-flex align-items-center justify-content-between cart-three rounded">
+                     <h1 class="catagories-title">Watch</h1>
+                     <img src="./images/shoes.png" class="cart-img" alt="">
+                 </div>
+             </div>
+         </div>
 
+     </section>
+
+ <!-- 
+         ------------------------------------
+                   Catagories end 
+         -----------------------------------
+     -->
 
 
     <!-- Bootstrap js bundle  -->
